# gearsync

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  accel-fft-sensor-fusion-design.md  adr.md  build.gradle  guided-calibration-design.md  keystore.properties.template  prompt.md  references.md  session-notes.md  settings.gradle  specs.md  vu-meter-specs.md
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: vehicle_config.json
app/src/main/cpp/: AccelVibrationDsp.h  CMakeLists.txt  CalibrationEngine.cpp  CalibrationEngine.h  DspPrimitives.h  FusionPolicy.h  GearHysteresis.h  NmeaSpeed.h  ToneCue.h  native-lib.cpp
app/src/main/cpp/test/: spike_nmea_parser_host.cpp  spike_tone_cue_host.cpp  test_accel_vibration_host.cpp  test_fusion_policy_host.cpp  test_gear_hysteresis_host.cpp  test_ransac_host.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/layout/: activity_calibration.xml  activity_main.xml
app/src/main/res/values/: colors.xml  colors_calibration.xml  strings.xml  themes.xml
docs/: TEST-DRIVE.md
plans/: accel-fft-sensor-fusion-implementation-plan.md  audio-cue-implementation-plan.md  guided-calibration-implementation-plan.json  guided-calibration-implementation-plan.md  nmea-speed-implementation-plan.md  obd-oracle-implementation-plan.md
scripts/: README.md  build-release-apk.sh  build-testdrive-apk.sh  generate-keystore.sh  land-pr.sh  publish-release.sh  sync-main.sh
(+17 files in other folders)
